--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@ h1 {
   text-align: center;
   margin-top: 0;
 }
+h1 a {
+  color: rgb(81, 168, 123);
+  text-decoration: none;
+  padding: 2px;
+}
 h2 {
   margin: 0;
   font-size: 28px;
@@ -23,7 +28,7 @@ footer {
   margin: -45px;
   opacity: 0.7;
 }
-a {
+footer a {
   color: rgb(81, 168, 123);
 }
 .container {
