--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,15 @@
 body {
   background-color: rgb(208, 235, 222);
-  font-family: sans-serif;
+  font-family: "Roboto Mono", monospace;
 }
 h1 {
-  font-size: 36px;
+  font-size: 45px;
   text-align: center;
   margin-top: 0;
+  font-weight: 700;
 }
 h1 a {
+  text-transform: uppercase;
   color: rgb(81, 168, 123);
   text-decoration: none;
   padding: 2px;
